data/derived/fa15/progs/unify/prog0926.ml.out
Characters 54-70:
  | h::t -> ((helper x) * h) @ tenEx (helper (x + 1)) t;;
            ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
